# flashlight_task

./: CMakeLists.txt  flashl.cpp  flashl.h  flashlight.pro  mainwindow.cpp  mainwindow.h  myview.cpp  myview.h  tcpclient.cpp  tcpclient.h
